--- a/Verleisystem/MainWindow.xaml
+++ b/Verleisystem/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="Verleisystem.MainWindow"
+﻿<Window xmlns:UserControls="clr-namespace:Verleihsystem.UserControls"  x:Class="Verleisystem.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -28,9 +28,21 @@
                  <ComboBox Width="149" Height="20"/>
              </StackPanel>
             
-            <DataGrid MinHeight="400"></DataGrid>
+            <ListBox MinHeight="400">
+                <UserControls:ProductUserControl />
+                <UserControls:ProductUserControl  CategoryName="Categoryname" ProductName="Testname" CustomerName="Tetscustomer" BarcodeTxt="58555"  Counter="12"/>
+                <UserControls:ProductUserControl />
+                <UserControls:ProductUserControl />
+            </ListBox>
         </StackPanel>
-        </Grid>
+        <ListView HorizontalAlignment="Left" Height="2406" Margin="-157,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="1960" d:ItemsSource="{d:SampleData ItemCount=5}">
+            <ListView.View>
+                <GridView>
+                    <GridViewColumn/>
+                </GridView>
+            </ListView.View>
+        </ListView>
+    </Grid>
         
     
 </Window>
