--- a/Verleisystem/Windows/EditAddCustomer.xaml
+++ b/Verleisystem/Windows/EditAddCustomer.xaml
@@ -10,13 +10,13 @@
 
         <Label Content="Name" Margin="34,45,308,260"/>
         <Label Content="Nr: XXXXXXX" Margin="242,45,55,255"/>
-        <TextBox HorizontalAlignment="Left" Margin="34,79,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="311" Background="#FFA49E9E"/>
+        <TextBox HorizontalAlignment="Left" Margin="34,79,0,0" TextWrapping="Wrap" Text="{Binding Name}" VerticalAlignment="Top" Width="311" Background="#FFA49E9E"/>
         <Label Content="Tel." Margin="34,121,308,184"/>
-        <TextBox HorizontalAlignment="Left" Margin="34,155,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="311" Background="#FFA49E9E"/>
+        <TextBox HorizontalAlignment="Left" Margin="34,155,0,0" TextWrapping="Wrap" Text="{Binding Telephone}" VerticalAlignment="Top" Width="311" Background="#FFA49E9E"/>
         <Label Content="Email" Margin="34,203,308,102"/>
-        <TextBox HorizontalAlignment="Left" Margin="34,237,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="311" Background="#FFA49E9E"/>
-        <Button Content="Abbrechen" HorizontalAlignment="Left" Margin="34,288,0,0" VerticalAlignment="Top"/>
-        <Button Content="Übernehmen" HorizontalAlignment="Left" Margin="272,288,0,0" VerticalAlignment="Top"/>
+        <TextBox HorizontalAlignment="Left" Margin="34,237,0,0" TextWrapping="Wrap" Text="{Binding Email}" VerticalAlignment="Top" Width="311" Background="#FFA49E9E"/>
+        <Button Content="Abbrechen" HorizontalAlignment="Left" Margin="34,288,0,0" VerticalAlignment="Top" Command="{Binding AbortCommand}"/>
+        <Button Content="Übernehmen" HorizontalAlignment="Left" Margin="272,288,0,0" VerticalAlignment="Top" Command="{Binding ConfirmCommand}"/>
 
     </Grid>
 </Window>
