--- a/Verleisystem/UserControls/ProductUserControl.xaml
+++ b/Verleisystem/UserControls/ProductUserControl.xaml
@@ -10,7 +10,7 @@
         <StackPanel Orientation="Horizontal" Name="stkBackground" Width="*">
             <Label Name="productname" Content="Name" VerticalAlignment="Center"/>
             <Label Name="categoryname" Content="Category" VerticalAlignment="Center"/>
-            <Label Name="customer" Content="Customer" VerticalAlignment="Center"/>
+            <Label Name="customer" Content="CustomerUserControl" VerticalAlignment="Center"/>
             <Label Name="barcodetxt" Content="BarcodeText" VerticalAlignment="Center"/>
             <Image Name="barcodeimg" VerticalAlignment="Center"/>
             <Label Name="lenddate" Content="LendDate" VerticalAlignment="Center"/>
