--- a/Verleisystem/UserControls/CustomerUserControl.xaml
+++ b/Verleisystem/UserControls/CustomerUserControl.xaml
@@ -7,7 +7,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        <StackPanel Orientation="Horizontal" Name="stkBackground" Width="*">
+        <StackPanel Orientation="Horizontal" Name="stkBackground" >
 
             <Label Name="customername" Content="CustomerUserControl" VerticalAlignment="Center"/>
             <Label Name="customerid" Content="ID" VerticalAlignment="Center"/>
