--- a/Verleisystem/MainWindow.xaml
+++ b/Verleisystem/MainWindow.xaml
@@ -18,7 +18,9 @@
             <MenuItem Header="Home"/>
             <MenuItem Header="Ansicht"/>
         </Menu>
-        <StackPanel Grid.Row="1" Background="LightGray"/>
+        <StackPanel Grid.Row="1" Background="LightGray">
+            <UserControls:HomeRibbon Height="*"/>
+        </StackPanel>
 
 
 
