--- a/Verleisystem/MainWindow.xaml
+++ b/Verleisystem/MainWindow.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Verleisystem"
+        xmlns:local="clr-namespace:Verleisystem" xmlns:viewmodels="clr-namespace:Verleihsystem.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:MainWindowViewModel}"
         mc:Ignorable="d"
         Title="Vereleihsystem" Height="729" Width="940">
     
@@ -15,7 +15,7 @@
             </Grid.RowDefinitions>
             <Menu >
             <MenuItem Header="File" Click="File_OnClick"/>
-            <MenuItem Header="Home"/>
+            <MenuItem Header="Home" Command="{Binding TestCommand, Mode=OneWay}"/>
             <MenuItem Header="Ansicht"/>
         </Menu>
         <StackPanel Grid.Row="1" Background="LightGray"/>
