--- a/Verleisystem/MainWindow.xaml
+++ b/Verleisystem/MainWindow.xaml
@@ -6,14 +6,14 @@
         xmlns:local="clr-namespace:Verleisystem" xmlns:viewmodels="clr-namespace:Verleihsystem.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:MainWindowViewModel}"
         mc:Ignorable="d"
         Title="Vereleihsystem" Height="729" Width="940">
-    
-        <Grid >
-            <Grid.RowDefinitions>
-                <RowDefinition Height="30"></RowDefinition>
-                <RowDefinition Height="80"></RowDefinition>
-                <RowDefinition Height="*"></RowDefinition>
-            </Grid.RowDefinitions>
-            <Menu >
+
+    <Grid >
+        <Grid.RowDefinitions>
+            <RowDefinition Height="30"></RowDefinition>
+            <RowDefinition Height="110"></RowDefinition>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+        <Menu >
             <MenuItem Header="File" Click="File_OnClick"/>
             <MenuItem Header="Home" Command="{Binding ConsoleCommand}"/>
             <MenuItem Header="Ansicht">
@@ -27,16 +27,17 @@
             <UserControls:HomeRibbon DataContext="{Binding HomeRibbon}"/>
             <Button Content="Lend" Command="{Binding LendProductCommand}"/>
             <Button Content="Show Lent Products" Command="{Binding ShowLentProductsCommand}"/>
+            <Label Content="Products" Width="500" Height="40" HorizontalContentAlignment="Center"/>
         </StackPanel>
 
 
 
-        <StackPanel Margin="10" Grid.Row="2">
-             <StackPanel Orientation="Horizontal">
-                 <TextBox Margin="0,30" Width="766"/>
-                 <ComboBox Width="149" Height="20"/>
-             </StackPanel>
-            
+        <StackPanel Margin="10,10,10,10" Grid.Row="2">
+            <StackPanel Orientation="Horizontal">
+                <TextBox Margin="0,30" Width="766"/>
+                <ComboBox Width="149" Height="20"/>
+            </StackPanel>
+
             <ListBox MinHeight="400">
                 <!--<UserControls:ProductUserControl />
                 <UserControls:ProductUserControl  CategoryName="Categoryname" ProductName="Testname" CustomerName="Tetscustomer" BarcodeTxt="58555"  Counter="12"/>
@@ -44,7 +45,7 @@
                 <UserControls:ProductUserControl />-->
             </ListBox>
         </StackPanel>
-        <ListView SelectedItem="{Binding SelectedUserControl}" HorizontalAlignment="Left" Height="2406" Margin="0,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="1960" ItemsSource="{Binding UserControls}">
+        <ListView SelectedItem="{Binding SelectedUserControl}" HorizontalAlignment="Left" Height="583" Margin="0,15,0,0" Grid.Row="2" VerticalAlignment="Top" Width="930" ItemsSource="{Binding UserControls}">
             <ListView.View>
                 <GridView>
                     <GridViewColumn/>
@@ -52,6 +53,6 @@
             </ListView.View>
         </ListView>
     </Grid>
-        
-    
+
+
 </Window>
